--- a/SmartOrder/SmartOrder/Mypage/MyPageStoryboard.storyboard
+++ b/SmartOrder/SmartOrder/Mypage/MyPageStoryboard.storyboard
@@ -37,7 +37,7 @@
                                 <rect key="frame" x="0.0" y="88" width="414" height="213"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="coffeebottlefilled" translatesAutoresizingMaskIntoConstraints="NO" id="WO4-td-YjP">
-                                        <rect key="frame" x="0.0" y="21.5" width="414" height="170"/>
+                                        <rect key="frame" x="124" y="21.5" width="166" height="170"/>
                                     </imageView>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="contactAdd" showsTouchWhenHighlighted="YES" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ws9-b9-LYe">
                                         <rect key="frame" x="248.5" y="134" width="62" height="57.5"/>
@@ -52,8 +52,8 @@
                                 </subviews>
                                 <color key="backgroundColor" red="0.30922171473503113" green="0.56749409437179565" blue="0.82502394914627075" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
-                                    <constraint firstItem="WO4-td-YjP" firstAttribute="trailing" secondItem="E2u-BO-q2B" secondAttribute="trailing" id="96N-Kc-8jJ"/>
-                                    <constraint firstItem="WO4-td-YjP" firstAttribute="leading" secondItem="E2u-BO-q2B" secondAttribute="leading" id="C2K-3v-pDf"/>
+                                    <constraint firstItem="WO4-td-YjP" firstAttribute="trailing" secondItem="E2u-BO-q2B" secondAttribute="trailing" multiplier="0.7" id="96N-Kc-8jJ"/>
+                                    <constraint firstItem="WO4-td-YjP" firstAttribute="leading" secondItem="E2u-BO-q2B" secondAttribute="trailing" multiplier="0.3" id="C2K-3v-pDf"/>
                                     <constraint firstItem="ws9-b9-LYe" firstAttribute="leading" secondItem="E2u-BO-q2B" secondAttribute="trailing" multiplier="0.6" id="NhF-3t-hT7"/>
                                     <constraint firstItem="ws9-b9-LYe" firstAttribute="bottom" secondItem="WO4-td-YjP" secondAttribute="bottom" id="bEr-UE-JVe"/>
                                     <constraint firstItem="WO4-td-YjP" firstAttribute="top" secondItem="E2u-BO-q2B" secondAttribute="bottom" multiplier="0.1" id="jDG-nx-4IF"/>
@@ -564,13 +564,13 @@
                                                         <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="HHz-fZ-fJo">
                                                             <rect key="frame" x="0.0" y="0.0" width="106" height="41"/>
                                                             <subviews>
-                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="이름" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5GO-LF-Jtp">
+                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="이름" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5GO-LF-Jtp">
                                                                     <rect key="frame" x="0.0" y="0.0" width="106" height="20.5"/>
                                                                     <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="17"/>
                                                                     <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                                                     <nil key="highlightedColor"/>
                                                                 </label>
-                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="cafeNameLabel" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kaB-ee-lsh">
+                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="cafeNameLabel" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kaB-ee-lsh">
                                                                     <rect key="frame" x="0.0" y="20.5" width="106" height="20.5"/>
                                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                                     <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
@@ -598,13 +598,13 @@
                                                         <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="oxV-go-BaN">
                                                             <rect key="frame" x="0.0" y="104" width="106" height="41"/>
                                                             <subviews>
-                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="금액" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="82J-pL-hCe">
+                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="금액" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="82J-pL-hCe">
                                                                     <rect key="frame" x="0.0" y="0.0" width="106" height="20.5"/>
                                                                     <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="17"/>
                                                                     <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                                                     <nil key="highlightedColor"/>
                                                                 </label>
-                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="totalPriceLabel" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="I42-ph-Qlj">
+                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="totalPriceLabel" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="I42-ph-Qlj">
                                                                     <rect key="frame" x="0.0" y="20.5" width="106" height="20.5"/>
                                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                                     <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
