--- a/SmartOrder/SmartOrder/Mypage/MyPageStoryboard.storyboard
+++ b/SmartOrder/SmartOrder/Mypage/MyPageStoryboard.storyboard
@@ -345,7 +345,7 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logouticon" translatesAutoresizingMaskIntoConstraints="NO" id="bdz-iN-CU7">
-                                        <rect key="frame" x="331" y="17.5" width="74.5" height="53"/>
+                                        <rect key="frame" x="319" y="17.5" width="95" height="53"/>
                                     </imageView>
                                 </subviews>
                                 <color key="backgroundColor" red="0.31689900160000001" green="0.57918137309999995" blue="0.84086620810000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -353,11 +353,11 @@
                                     <constraint firstItem="Ta8-Qs-Iej" firstAttribute="leading" secondItem="NsS-88-HAn" secondAttribute="trailing" multiplier="0.05" id="50c-sv-AOg"/>
                                     <constraint firstItem="znb-vj-Nnl" firstAttribute="trailing" secondItem="NsS-88-HAn" secondAttribute="trailing" id="92G-bW-VJv"/>
                                     <constraint firstItem="znb-vj-Nnl" firstAttribute="leading" secondItem="NsS-88-HAn" secondAttribute="leading" id="9sZ-qO-umt"/>
-                                    <constraint firstItem="bdz-iN-CU7" firstAttribute="trailing" secondItem="NsS-88-HAn" secondAttribute="trailing" multiplier="0.98" id="EVH-Kp-aaF"/>
+                                    <constraint firstItem="bdz-iN-CU7" firstAttribute="trailing" secondItem="NsS-88-HAn" secondAttribute="trailing" id="EVH-Kp-aaF"/>
                                     <constraint firstItem="Ta8-Qs-Iej" firstAttribute="bottom" secondItem="NsS-88-HAn" secondAttribute="bottom" id="N9O-UJ-Y6q"/>
                                     <constraint firstItem="znb-vj-Nnl" firstAttribute="top" secondItem="NsS-88-HAn" secondAttribute="top" id="X6T-7l-KII"/>
                                     <constraint firstItem="bdz-iN-CU7" firstAttribute="top" secondItem="NsS-88-HAn" secondAttribute="bottom" multiplier="0.2" id="fvi-xh-St3"/>
-                                    <constraint firstItem="bdz-iN-CU7" firstAttribute="leading" secondItem="NsS-88-HAn" secondAttribute="trailing" multiplier="0.8" id="h4Z-qI-s9f"/>
+                                    <constraint firstItem="bdz-iN-CU7" firstAttribute="leading" secondItem="NsS-88-HAn" secondAttribute="trailing" constant="-95" id="h4Z-qI-s9f"/>
                                     <constraint firstItem="znb-vj-Nnl" firstAttribute="bottom" secondItem="NsS-88-HAn" secondAttribute="bottom" id="iOR-9n-SvU"/>
                                     <constraint firstItem="Ta8-Qs-Iej" firstAttribute="trailing" secondItem="NsS-88-HAn" secondAttribute="trailing" multiplier="0.3" id="pNa-1l-Jvj"/>
                                     <constraint firstItem="Ta8-Qs-Iej" firstAttribute="top" secondItem="NsS-88-HAn" secondAttribute="top" id="sTs-2v-N5e"/>
@@ -374,7 +374,7 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="RA5-Vw-RX0">
-                                        <rect key="frame" x="339.5" y="26" width="56" height="61"/>
+                                        <rect key="frame" x="339" y="26" width="77" height="61"/>
                                         <color key="onTintColor" red="1" green="0.68995137164423681" blue="0.36267740945715421" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                         <connections>
                                             <action selector="pushBtn:" destination="jg6-Oo-O6F" eventType="valueChanged" id="rxN-PQ-Cv5"/>
@@ -385,8 +385,8 @@
                                 <constraints>
                                     <constraint firstItem="mFQ-ZL-C13" firstAttribute="top" secondItem="hh5-d3-wIr" secondAttribute="top" id="31l-Mn-Xvf"/>
                                     <constraint firstItem="mFQ-ZL-C13" firstAttribute="trailing" secondItem="hh5-d3-wIr" secondAttribute="trailing" multiplier="0.4" id="38O-OY-YWP"/>
-                                    <constraint firstItem="RA5-Vw-RX0" firstAttribute="trailing" secondItem="hh5-d3-wIr" secondAttribute="trailing" multiplier="0.95" id="9Hf-K8-sv9"/>
-                                    <constraint firstItem="RA5-Vw-RX0" firstAttribute="leading" secondItem="hh5-d3-wIr" secondAttribute="trailing" multiplier="0.82" id="DH1-Ek-sEP"/>
+                                    <constraint firstItem="RA5-Vw-RX0" firstAttribute="trailing" secondItem="hh5-d3-wIr" secondAttribute="trailing" id="9Hf-K8-sv9"/>
+                                    <constraint firstItem="RA5-Vw-RX0" firstAttribute="leading" secondItem="hh5-d3-wIr" secondAttribute="trailing" constant="-75" id="DH1-Ek-sEP"/>
                                     <constraint firstItem="mFQ-ZL-C13" firstAttribute="bottom" secondItem="hh5-d3-wIr" secondAttribute="bottom" id="FOt-kt-hIc"/>
                                     <constraint firstItem="mFQ-ZL-C13" firstAttribute="leading" secondItem="hh5-d3-wIr" secondAttribute="trailing" multiplier="0.05" id="Fqh-kk-wCK"/>
                                     <constraint firstItem="RA5-Vw-RX0" firstAttribute="top" secondItem="hh5-d3-wIr" secondAttribute="bottom" multiplier="0.3" id="QhJ-TG-HmJ"/>
@@ -403,7 +403,7 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="bordered" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="xqe-jg-Iao">
-                                        <rect key="frame" x="290" y="26" width="103.5" height="44.5"/>
+                                        <rect key="frame" x="264" y="26" width="129.5" height="44.5"/>
                                         <segments>
                                             <segment title="스탬프"/>
                                             <segment title="게이지"/>
@@ -422,7 +422,7 @@
                                     <constraint firstItem="NAO-2D-e2p" firstAttribute="trailing" secondItem="HXj-vS-dTK" secondAttribute="trailing" multiplier="0.3" id="GUa-eY-y9p"/>
                                     <constraint firstItem="xqe-jg-Iao" firstAttribute="top" secondItem="HXj-vS-dTK" secondAttribute="bottom" multiplier="0.3" id="QEn-xN-ETI"/>
                                     <constraint firstItem="NAO-2D-e2p" firstAttribute="bottom" secondItem="HXj-vS-dTK" secondAttribute="bottom" id="bGw-Ih-jsn"/>
-                                    <constraint firstItem="xqe-jg-Iao" firstAttribute="leading" secondItem="HXj-vS-dTK" secondAttribute="trailing" multiplier="0.7" id="hgx-Zc-wqm"/>
+                                    <constraint firstItem="xqe-jg-Iao" firstAttribute="leading" secondItem="HXj-vS-dTK" secondAttribute="trailing" constant="-150" id="hgx-Zc-wqm"/>
                                     <constraint firstItem="NAO-2D-e2p" firstAttribute="top" secondItem="HXj-vS-dTK" secondAttribute="top" id="k07-yi-1cc"/>
                                 </constraints>
                             </view>
@@ -436,7 +436,7 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ic_mail_outline_white_2x-1" translatesAutoresizingMaskIntoConstraints="NO" id="sG8-sA-4vH">
-                                        <rect key="frame" x="343.5" y="0.0" width="54" height="87"/>
+                                        <rect key="frame" x="339" y="0.0" width="58.5" height="87"/>
                                     </imageView>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2bq-2Y-u9F">
                                         <rect key="frame" x="0.0" y="0.0" width="414" height="87"/>
@@ -453,7 +453,7 @@
                                     <constraint firstItem="g8M-3Z-L3m" firstAttribute="leading" secondItem="gas-67-wMw" secondAttribute="trailing" multiplier="0.05" id="Nkf-kX-klA"/>
                                     <constraint firstItem="g8M-3Z-L3m" firstAttribute="trailing" secondItem="gas-67-wMw" secondAttribute="trailing" multiplier="0.3" id="WWc-yx-qIm"/>
                                     <constraint firstItem="2bq-2Y-u9F" firstAttribute="leading" secondItem="gas-67-wMw" secondAttribute="leading" id="fU9-U6-qi7"/>
-                                    <constraint firstItem="sG8-sA-4vH" firstAttribute="leading" secondItem="gas-67-wMw" secondAttribute="trailing" multiplier="0.83" id="jHb-2g-nEj"/>
+                                    <constraint firstItem="sG8-sA-4vH" firstAttribute="leading" secondItem="gas-67-wMw" secondAttribute="trailing" constant="-75" id="jHb-2g-nEj"/>
                                     <constraint firstItem="g8M-3Z-L3m" firstAttribute="bottom" secondItem="gas-67-wMw" secondAttribute="bottom" id="jgG-Ou-vbq"/>
                                     <constraint firstItem="2bq-2Y-u9F" firstAttribute="top" secondItem="gas-67-wMw" secondAttribute="top" id="kV8-EK-R4O"/>
                                     <constraint firstItem="sG8-sA-4vH" firstAttribute="trailing" secondItem="gas-67-wMw" secondAttribute="trailing" multiplier="0.96" id="l7m-nn-9Fr"/>
