--- a/SmartOrder/SmartOrder/Mypage/MyPageStoryboard.storyboard
+++ b/SmartOrder/SmartOrder/Mypage/MyPageStoryboard.storyboard
@@ -37,10 +37,13 @@
                                 <rect key="frame" x="0.0" y="88" width="414" height="213"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="coffeebottlefilled" translatesAutoresizingMaskIntoConstraints="NO" id="WO4-td-YjP">
-                                        <rect key="frame" x="124" y="21.5" width="166" height="170"/>
+                                        <rect key="frame" x="124" y="23.5" width="166" height="165.5"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" secondItem="WO4-td-YjP" secondAttribute="height" id="EKc-eY-bbF"/>
+                                        </constraints>
                                     </imageView>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="contactAdd" showsTouchWhenHighlighted="YES" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ws9-b9-LYe">
-                                        <rect key="frame" x="248.5" y="134" width="62" height="57.5"/>
+                                        <rect key="frame" x="248.5" y="132.5" width="62" height="56.5"/>
                                         <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <state key="normal">
                                             <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -54,11 +57,10 @@
                                 <constraints>
                                     <constraint firstItem="WO4-td-YjP" firstAttribute="trailing" secondItem="E2u-BO-q2B" secondAttribute="trailing" multiplier="0.7" id="96N-Kc-8jJ"/>
                                     <constraint firstItem="WO4-td-YjP" firstAttribute="leading" secondItem="E2u-BO-q2B" secondAttribute="trailing" multiplier="0.3" id="C2K-3v-pDf"/>
+                                    <constraint firstItem="WO4-td-YjP" firstAttribute="centerY" secondItem="E2u-BO-q2B" secondAttribute="centerY" id="F3o-Wq-chj"/>
                                     <constraint firstItem="ws9-b9-LYe" firstAttribute="leading" secondItem="E2u-BO-q2B" secondAttribute="trailing" multiplier="0.6" id="NhF-3t-hT7"/>
                                     <constraint firstItem="ws9-b9-LYe" firstAttribute="bottom" secondItem="WO4-td-YjP" secondAttribute="bottom" id="bEr-UE-JVe"/>
-                                    <constraint firstItem="WO4-td-YjP" firstAttribute="top" secondItem="E2u-BO-q2B" secondAttribute="bottom" multiplier="0.1" id="jDG-nx-4IF"/>
                                     <constraint firstItem="ws9-b9-LYe" firstAttribute="top" secondItem="WO4-td-YjP" secondAttribute="bottom" multiplier="0.7" id="jbX-ph-9LL"/>
-                                    <constraint firstItem="WO4-td-YjP" firstAttribute="bottom" secondItem="E2u-BO-q2B" secondAttribute="bottom" multiplier="0.9" id="ndR-KP-qFJ"/>
                                     <constraint firstItem="ws9-b9-LYe" firstAttribute="trailing" secondItem="E2u-BO-q2B" secondAttribute="trailing" multiplier="0.75" id="o55-MP-s83"/>
                                 </constraints>
                             </view>
